--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -21,8 +21,11 @@
         <%= f.submit 'Update Invoice' %>
     </section>
       <% end %>
-  <p>Created on: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %>
-  <p>Total Revenue: $<%= @invoice.total_revenue %>
+  <div id="revenues">
+    <p>Created on: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %>
+    <p>Total Revenue: $<%= @invoice.total_revenue %>
+    <p>Total Revenue after discounts: $<%= @invoice.invoice_discounted_revenue %>0</p>
+  </div>
 
   <h4>Customer:</h4>
     <%= @invoice.customer.first_name %> <%= @invoice.customer.last_name %><br>
