--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -24,3 +24,12 @@
     <% end %>
   </div>
 </div>
+
+<div class="upcoming_holidays">
+  <h2>Upcoming Holidays:<br></h2>
+  <% @holidays.upcoming_us_holidays.each_with_index do |holiday, index| %>
+  <div class="holiday_<%=index%>">
+    <th scope="row"><%= holiday[:name]%></th><br>
+    <th scope="row"><%= holiday[:date]%></th><br><br>
+  </div>
+    <%end%>
