Comment out things breaking heroku

--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -25,11 +25,11 @@
   </div>
 </div>
 
-<div class="upcoming_holidays">
+<%# <div class="upcoming_holidays">
   <h2>Upcoming Holidays:<br></h2>
   <% @holidays.upcoming_us_holidays.each_with_index do |holiday, index| %>
-  <div class="holiday_<%=index%>">
-    <th scope="row"><%= holiday[:name]%></th><br>
-    <th scope="row"><%= holiday[:date]%></th><br><br>
-  </div>
+  <%# <div class="holiday_<%=index%>">
+    <%# <th scope="row"><%= holiday[:name]%></th><br>
+    <%# <th scope="row"><%= holiday[:date]%></th><br><br>
+  <%# </div>
     <%end%>
